B&L QA/objects/MSR_Header__c.object
<CustomObject>
    <description>Stock / consignment orders.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for which the MSR order was placed</description>
        <label>Ship To Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MSR Headers</relationshipLabel>
        <relationshipName>MSR_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_ID__c</fullName>
        <description>Account to whom a consignment order (billing) will be sent, after MSR stock is used.</description>
        <label>Bill To ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>TEXT(Account__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the consignment order that this MSR is replenishing</description>
        <label>Consignment Order</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>MSR Headers</relationshipLabel>
        <relationshipName>MSR_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignment_Sales_Order_No__c</fullName>
        <description>Consignment sales order number</description>
        <label>Consignment Sales Order No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <description>Customer purchase order number</description>
        <label>Customer PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Business_Unit__c</fullName>
        <description>Inventory business unit in which this MSR took place</description>
        <label>Inventory Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EURLC</fullName>
                </value>
                <value>
                    <fullName>VCLSU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <description>The PeopleSoft MSR Order Number</description>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Shipments__c</fullName>
        <description>The number of msr_shipment__c records associated with this MSR</description>
        <label>No of Shipments</label>
        <summaryForeignKey>MSR_Shipment__c.MSR_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Date the MSR order was placed</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Entered_By__c</fullName>
        <description>User who entered this order</description>
        <label>Order Entered By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>The ship to account&apos;s Set ID</description>
        <label>SETID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BLUSA</fullName>
                </value>
                <value>
                    <fullName>UNKGD</fullName>
                </value>
                <value>
                    <fullName>NETPR</fullName>
                </value>
                <value>
                    <fullName>NORSE</fullName>
                </value>
                <value>
                    <fullName>NORNO</fullName>
                </value>
                <value>
                    <fullName>NORDK</fullName>
                </value>
                <value>
                    <fullName>NORFI</fullName>
                </value>
                <value>
                    <fullName>FRANC</fullName>
                </value>
                <value>
                    <fullName>BELGM</fullName>
                </value>
                <value>
                    <fullName>SPACM</fullName>
                </value>
                <value>
                    <fullName>SPACI</fullName>
                </value>
                <value>
                    <fullName>PORTU</fullName>
                </value>
                <value>
                    <fullName>ITACM</fullName>
                </value>
                <value>
                    <fullName>DMBLV</fullName>
                </value>
                <value>
                    <fullName>SWICM</fullName>
                </value>
                <value>
                    <fullName>AUSTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_To_ID__c</fullName>
        <description>Peoplesoft Ship to ID</description>
        <label>Ship To ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>MSR_Shipment__c.Quantity__c</summarizedField>
        <summaryForeignKey>MSR_Shipment__c.MSR_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Track_Consignment_Order__c</fullName>
        <description>Links to the order tracking page</description>
        <formula>IF (  Consignment_Sales_Order_No__c &lt;&gt; &apos;&apos;,  HYPERLINK(&quot;https://c.na8.visual.force.com/apex/CtrlOrderTracking_Search?bu=&quot; &amp;  LEFT( Consignment_Sales_Order_No__c , 5) &amp; &quot;&amp;orderNo=&quot; &amp;  MID( Consignment_Sales_Order_No__c , 7, LEN(Consignment_Sales_Order_No__c)-6)   , &quot;Search for Consignment Order&quot; ) ,  &quot;Salesforce Order History Unavailable&quot;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&gt;</label>
        <type>Text</type>
    </fields>
    <label>MSR Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bill_To_ID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Consignment_Sales_Order_No__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Order_Date__c</columns>
        <columns>No_of_Shipments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Order_Entered_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BER_CoE_Germany_Austria_Switzerland</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SETID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Bill_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Inventory_Business_Unit__c</columns>
        <columns>No_of_Shipments__c</columns>
        <columns>Consignment_Sales_Order_No__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Order_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETID__c</field>
            <operation>equals</operation>
            <value>DMBLV,AUSTR,SWICM</value>
        </filters>
        <label>BER CoE: Germany, Austria &amp; Switzerland</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEASUCSSALLBUs</role>
            <role>EMEASUCSSBerlin</role>
            <role>EMEASUCSSKingston</role>
            <role>EMEASUCSSNorth</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KIN_CoE_UK_Nordics_Netherlands_MSRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Bill_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>No_of_Shipments__c</columns>
        <columns>Consignment_Sales_Order_No__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Order_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETID__c</field>
            <operation>equals</operation>
            <value>UNKGD,NORNO,NORSE,NORDK,NORFI,NETPR</value>
        </filters>
        <label>KIN CoE: UK, Nordics &amp; Netherlands MSRs</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEASUCSSALLBUs</role>
            <role>EMEASUCSSKingston</role>
            <role>EMEASUCSSNorth</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPL_CoE_France_Belgium_Iberia_Italy</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SETID__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Bill_To_ID__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Inventory_Business_Unit__c</columns>
        <columns>No_of_Shipments__c</columns>
        <columns>Consignment_Sales_Order_No__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Order_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SETID__c</field>
            <operation>equals</operation>
            <value>FRANC,BELGM,SPACM,PORTU,ITALY</value>
        </filters>
        <label>MPL CoE: France/Belgium, Iberia &amp; Italy</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEASUCSSALLBUs</role>
            <role>EMEASUCSSMontpellier</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NA_CS_View_All_BLUSA_MSRs</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Ship_To_ID__c</columns>
        <columns>Bill_To_ID__c</columns>
        <columns>No_of_Shipments__c</columns>
        <columns>Consignment_Sales_Order_No__c</columns>
        <columns>Customer_PO__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Order_Entered_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inventory_Business_Unit__c</field>
            <operation>equals</operation>
            <value>VCLSU</value>
        </filters>
        <label>NA CS: View All BLUSA MSRs</label>
        <language>en_US</language>
        <sharedTo>
            <role>USSurgical</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>MSR No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSR Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>